Update hero image source in index.html
Replaced placeholder image source with a local image file.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Imagen demo, puedes cambiarla si quieres -->
         <div class="hero__image-inner">
           <img
-            src="https://via.placeholder.com/600x380?text=Viaje+de+fin+de+a%C3%B1o"
+            src="TurismoViajeEscolar001.JPG"
             alt="Jóvenes de viaje de fin de año"
           />
           <div class="hero__badge">
