--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     content="TurismoViajeEscolar organiza viajes de fin de año para cursos de estudiantes, con paquetes all inclusive y actividades pensadas para jóvenes."
   />
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Genesys Predictive Engagement Website Snippet -->
+  <script>
+    (function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
+    (a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
+    d=t.getElementsByTagName(c)[0];u.async=1;u.src=l;u.charset='utf-8';d.parentNode.insertBefore(u,d)
+    })(window, document, 'script', 'https://apps.usw2.pure.cloud/journey/sdk/js/web/v1/ac.js', 'ac');
+    ac('init', '8a819025-64da-4ce2-82ba-0c9655165e74', { region: 'usw2' });
+    ac('pageview');
+  </script>
 </head>
 <body>
   <!-- HEADER / NAV -->
