Add Genesys Knowledge Portal div to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     ac('init', '8a819025-64da-4ce2-82ba-0c9655165e74', { region: 'usw2' });
     ac('pageview');
   </script>
-
+  <!-- GENESYS Knowledge Portal -->
+  <div id="genesys-support-center"></div>
+  
   <!-- Snippet Web Messenger (OBLIGATORIO para Action Maps) -->
   <script type="text/javascript" charset="utf-8">
     (function (g, e, n, es, ys) {
