Add Knowledge Portal button to navigation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <a href="#paquetes">Paquetes</a>
         <a href="#testimonios">Testimonios</a>
         <a href="#contacto">Contacto</a>
+     <!-- Agrego Botón Knowledge -->
+        <a href="knowledge.html" target="_blank" rel="noopener">Knowledge Portal</a>
+     <!-- Fin Agrego Botón Knowledge -->
         <button id="btn-cotizar-hero-nav" class="btn btn--outline">
           Cotizar viaje escolar
         </button>
