Remove target and rel attributes from Knowledge Portal link

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <a href="#testimonios">Testimonios</a>
       <a href="#contacto">Contacto</a>
     
-      <a href="knowledge.html" target="_blank" rel="noopener">Knowledge Portal</a>
-    
+      <a href="knowledge.html">Knowledge Portal</a>
+
       <button id="btn-cotizar-hero-nav" class="btn btn--outline">
         Cotizar viaje escolar
       </button>
