Add final banner section to index.html

--- a/index.html
+++ b/index.html
@@ -313,6 +313,9 @@
       </div>
     </div>
   </section>
+  
+  <!-- BANNER FINAL -->
+  <section class="banner-final" aria-label="Banner final"></section>
 
   <!-- FOOTER -->
   <footer class="footer">
